--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 PORT=5000
-MONGODB_URI=mongodb://localhost:27017/ecommerce
+MONGODB_URI=mongodb+srv://yaswanth:Yaswanth123@cluster0.svzuxmm.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 JWT_SECRET=your_super_secret_jwt_key_here_change_this_in_production
 JWT_REFRESH_SECRET=your_refresh_token_secret_here_change_this_in_production
 JWT_EXPIRE=15m
